fix: update contrast on starter info
make background-color darker

--- a/src/app/features/issue-form/issue-form.component.scss
+++ b/src/app/features/issue-form/issue-form.component.scss
@@ -49,7 +49,7 @@
 
 .creation-info {
   align-items: center;
-  background-color: #2196f3;
+  background-color: #2179c0;
   border-radius: 4px;
   display: flex;
   margin-right: 1rem;
